--- a/css/section.css
+++ b/css/section.css
@@ -99,7 +99,7 @@ body{
 }
 .snip1533 {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-  color: #9e9e9e;
+  color: #030303;
   display: inline-block;
   font-family: 'Roboto', Arial, sans-serif;
   font-size: 16px;
