--- a/dashboard/css/dashboard.css
+++ b/dashboard/css/dashboard.css
@@ -244,3 +244,66 @@ ul li{
       line-height: 1.8;
     }
   }
+
+  
+/* Styles for the popup */
+.coupon-popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    z-index: 999;
+    animation: popup 0.7s;
+}
+@keyframes popup {
+    0%{
+      transform: scale(1);
+    }
+    50%{
+      transform: scale(1.4);
+    }
+    60%{
+      transform: scale(1.1);
+    }
+    70%{
+      transform: scale(1.2);
+    }
+    80%{
+      transform: scale(1);
+    }
+    90%{
+      transform: scale(1.1);
+    }
+    100%{
+      transform: scale(1);
+    }
+  }
+.popup-content {
+    gap: 1rem;
+    border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: grid;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    font-family: sans-serif;
+    padding: 2rem;
+    text-align: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+.close-button {
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    background: #0000002e;
+    position: absolute;
+    top: 7px;
+    right: 12px;
+    cursor: pointer;
+    font-size: 22px;
+}
